# ccc-linux-guest-hardening

./: .gitignore  LICENSE  Makefile  README.md  site.yml
.github/workflows/: ci.yml  deploy.yml
audit/sample_output/5.15-rc1/: smatch_warns_5.15_tdx_allyesconfig_driver_analysis_pci_config  smatch_warns_5.15_tdx_allyesconfig_filtered
bkc/audit/: 0001-check_host_input-add-a-pattern.patch  Makefile  README.md  gen_smatch_warns.sh  process_smatch_output.py  smatch_audit.sh  transfer_results.py
bkc/coverage/: README.md  strip_addr2line_absolute_path.sh
bkc/coverage/fast_matcher/: Cargo.toml  README.md
bkc/coverage/fast_matcher/src/: lib.rs  main.rs
bkc/coverage/smatcher/: README.md  setup.py
bkc/coverage/stimulus_minimizer/: coveralls2addr.py  minimize_stimulus.sh
bkc/kafl/: README.md  fuzz.sh  gen_addr2line.sh  init_harness.py  kafl_config.yaml  linux_kernel_sdv_kafl.config  linux_kernel_tdx_guest.config  linux_kernel_tdx_sprbkc.config  pipeline.py  prep_harness.py  requirements.txt  run_experiments.py  smatch_match.py  stats.plot  stats.py  summarize.sh
bkc/syzkaller/: README.md  guest.config  host.config  ssh-vm.sh  start-vm.sh
deploy/: Makefile  requirements.txt  requirements.yml  site.yml  vars.yml
deploy/templates/: env.j2
docs/: batch_run_campaign.md  boot_harnesses.txt  example_parser4tv.md  example_targeted_fuzzing.md  generate_smatch_audit_list.md  getting_started.md  guest_kernel_changes.md  kafl_agent.md  pipeline-overview.drawio  usermode_stimulus.md  workflow_overview.md
manifest/: create_env.sh  west.yml
templates/: env.j2
(+46 files in other folders)
