[package]
name = "fast_matcher"
version = "0.1.1"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lzzzz = "1.0.4"
clap = { version = "4.4.3", features = ["derive"] }
regex = "1.9.5"
glob = "0.3.1"
addr2line = "0.21.0"
memmap = "0.7.0"
itertools = "0.11.0"
workctl = "0.2.0"
rangemap = "1.3.0"
